# hylreg_QT

./: .gitignore  README.md  main.py  pyproject.toml
app/: main_window.py  output_panel.py  repo_selector.py  submodule_table.py
core/: git_runner.py  models.py
demo/hylreg_hub_manager/: README.md  main.py  pyproject.toml
demo/hylreg_hub_manager/app/: __init__.py  git_worker.py  submodule_actions.py
demo/hylreg_hub_manager/core/: __init__.py
demo/hylreg_hub_manager/docs/: 技术设计文档.md
docs/: 技术设计文档.md
